<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright (c) 2010-2015 Pierre LEVY androidsoft.org
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<resources>
    
    <!-- What's new dialog -->
    <string name="first_run_dialog_title">Welcome to Permission Friendly Apps!</string>
    <string name="first_run_dialog_message">Thanks for downloading Permission Friendly Apps\n\n
    Quick start instructions :\n
    \t• Click on applications to display permissions details.\n
    \n\n Enjoy it!\n
    </string>
    <string name="whats_new_dialog_title">What\'s new in Permission Friendly Apps</string>
    <string name="whats_new_dialog_message">Thanks for upgrading Permission Friendly Apps\n\n
    <b>New in version 2.2.0:</b>\n
    \t• Preferences to switch between Dark and Light theme.
    \n\n <b>Still no ads and no permission required.</b>
    \n\n <b>Enjoy it and don\'t forget to leave a rating on Google Play Store.</b>
    </string>


    <!-- Credits screen -->
    <string name="credits_current_version">Version 2.2.0</string>
    <string name="credits_app_name">Permission Friendly Apps</string>


    <!-- Menu -->
    <string name="menu_help">Help</string>
    <string name="menu_credits">About</string>
    <string name="menu_preferences">Settings</string>
    
    <string name="app_name">Permission Friendly Apps</string>
    <string name="title_application_activity">Permission Friendly Apps</string>
    <string name="button_go">Go</string>
    <string name="button_sort_name">Sort by name</string>
    <string name="button_sort_score">Sort by score</string>
    <string name="message_no_application">Select an application to view its permissions</string>
    <string name="message_no_permission">Great ! This application requires no permission.\n\n
               It means that there is no ads, and it\'s totaly secure.\n\n
               To encourage this kind of application,\n give them a good rating on the Google Play Store.\n
               </string>
    <string name="asset_help">help.html</string>
    
    <string name="message_error_open">Sorry, unable to open this application !</string>
    <string name="message_error_market">Sorry, unable to access to the Google Play Store !</string>
    <string name="dialog_title_select_permission">Select a permission</string>
    
    <!-- Accessibility -->
    <string name="iv_application_logo">Application\'s logo : a shield with a checkered heart shape</string>
    <string name="iv_indicator_score">Score led indicator</string>
    <string name="iv_indicator_name">Name led indicator</string>
    <string name="iv_indicator_trusted">Trusted led indicator</string>
    <string name="iv_indicator_filter">Filter led indicator</string>
    <string name="iv_button_trusted">Trusted button icon</string>
    <string name="iv_button_filter">Filter button icon</string>
    <string name="iv_application_icon">Current application icon</string>
    <string name="iv_score_icon">Score icon (heart or dangerous)</string>
    <string name="iv_danger_icon">Dangerousity icon (heart or dangerous)</string>
    
    <string name="message_untrust">The application has been removed from the trusted list!</string>
    <string name="message_trust">The application has been added to the trusted list!</string>
    
    <string name="pref_title">Preferences</string>
    <string name="pref_display_subtitle">Display</string>
    <string name="checkbox_theme_dark">Theme Dark</string>

</resources>
