<?xml version="1.0" encoding="utf-8"?>
<!--
/* Copyright (c) 2010-2014 Pierre LEVY androidsoft.org
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" 
              android:layout_width="match_parent"
              android:layout_height="match_parent" 
              android:layout_margin="@dimen/padding"
              android:padding="@dimen/padding_pane"
              
>
            
    <LinearLayout android:id="@+id/layout_application"
                  android:orientation="vertical" 
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" >
        
        <TableLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">
            
            <LinearLayout android:orientation="horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                <ImageView android:id="@+id/icon"
                           android:contentDescription="@string/iv_application_icon"
                           android:layout_width="@dimen/icon"
                           android:layout_height="@dimen/icon"
                           android:layout_marginRight="@dimen/padding"
                           android:padding="@dimen/padding"/>

            </LinearLayout>


            <TableLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                    
                <LinearLayout
                    android:orientation="vertical" 
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" >
            
                    <TextView android:id="@+id/name"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="@dimen/large_font_detail"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:padding="@dimen/padding_text"/>
                    <TextView android:id="@+id/package_name"
                              android:textSize="@dimen/small_font_detail"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:paddingLeft="@dimen/padding_text"/>
                    <TextView android:id="@+id/version"
                              android:textSize="@dimen/small_font_detail"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:paddingLeft="@dimen/padding_text"/>

                </LinearLayout>
            

            </TableLayout>
        </TableLayout>
    
        <LinearLayout
            android:orientation="horizontal" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:padding="@dimen/padding_pane"
            android:gravity="center_vertical|center_horizontal">
            <Button  style="@style/button_round"
                     android:id="@+id/button_open"
                     android:background="@drawable/button_open"
                     android:layout_marginRight="@dimen/padding"
                     android:text="" />
            <Button style="@style/button_round" 
                    android:id="@+id/button_uninstall"
                    android:background="@drawable/button_delete"
                    android:layout_marginLeft="@dimen/padding"
                    android:layout_marginRight="@dimen/padding"
                    android:text="" />            
            <Button android:id="@+id/trusted"
                    android:contentDescription="@string/iv_button_trusted"
                    android:layout_width="@dimen/button_round"
                    android:layout_height="@dimen/button_round"
                    android:layout_marginLeft="@dimen/padding"
                    android:padding="@dimen/padding"/>
            
        </LinearLayout>
    </LinearLayout>

    <TextView style="@style/text_message"
              android:id="@+id/message_no_application"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/message_no_application"
              android:gravity="center_vertical|center_horizontal" />

    <ScrollView android:id="@+id/layout_no_permission"
                android:layout_width="match_parent" 
                android:layout_height="match_parent"
                android:visibility="gone" >
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >
        
            <TextView  
                android:text="@string/message_no_permission"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        
            <Button  style="@style/button_round"
                     android:id="@+id/button_market"
                     android:padding="@dimen/padding_market"
                     android:text=""
                     android:background="@drawable/button_star"
                     android:layout_marginBottom="@dimen/padding" />
        
        </LinearLayout>
    </ScrollView>
    
    <ExpandableListView android:id="@+id/permissions_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/padding_pane"
                        android:groupIndicator="@null"/>

</LinearLayout>
